--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/hero.png" alt="">
+                <img src="img/hero.jpg" alt="">
             </div>
             <h1>Fernando Zavala</h1>
             <h2>MAC - Desarrollador Backend - PM</h2>
@@ -367,7 +367,7 @@
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/ubicacion.png" alt="">
+                    <img src="img/ubicacion.jpg" alt="">
                     <div class="info">
                         <ul>
                             <li>
