--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="https://drive.google.com/file/d/1FSzFwDar8gNVMjD7v9Wpyv-No9MffVVl/view?usp=sharing" alt="">
+                <img src="img/hero.jpg" alt="">
             </div>
             <h1>Fernando Zavala</h1>
             <h2>MAC - Desarrollador Backend - PM</h2>
